--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<link rel="icon" type="image/ico" href="/images/sneakyfetus.jpg">
+		<link rel="icon" type="image/ico" href="/images/santafetus.jpg">
 	</head>
 	<body>
 		<div style="width:1000px; margin:auto">
-			<img style="height:100%;" src="/images/sneakyfetus.jpg" />
+			<img style="height:100%;" src="/images/santafetus.jpg" />
 		</div>
 	</body>
 </html>
